# Parquet2MBT

./: .dockerignore  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: wind_bench.rs
deploy/docker/: Dockerfile  docker_use.md
doc/: PRD.md  disk_speed_report.md  user_guide.md  windtunnel_analysis_report.md
reference/: parquet_to_sstable.py  trans_sst_minicpm3_74k.py
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/index/: mod.rs
src/metrics/: mod.rs
src/pipeline/: mod.rs
src/preprocessor/: mod.rs
src/reader/: mod.rs  pool.rs
src/scanner/: mod.rs
src/tokenizer/: mod.rs  pool.rs
src/writer/: mod.rs  rotating.rs
tools/: analyze_parquet.py  benchmark_workers.sh  compare_parquet_bin.py  generate_parquet.py  get_bin_content.py  get_parquet_content.py  get_parquet_schema.py  parquet_to_sstable.py  release.sh  test_96core.sh
tools/doc/: README_parquet_tools.md
wind_tunnel/: benchmark_pipeline.sh  benchmark_pipeline.toml  benchmark_workers.sh  wind_tunnel_results.csv
wind_tunnel/bash/: benchmark_pipeline.sh  benchmark_rayon_tokenize.sh  benchmark_reader.sh
