[package]
name = "parquet2mbt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
crossbeam-channel = "0.5"
walkdir = "2"
glob = "0.3"
num_cpus = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Arrow/Parquet 与 Tokenizers
arrow = { version = "53", features = ["ipc"] }
arrow-array = "53"
arrow-schema = "53"
parquet = "53"
tokenizers = { version = "0.19", default-features = false, features = ["http","onig"] }

# 使用vendored OpenSSL避免系统依赖
[dependencies.openssl]
version = "*"
features = ["vendored"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_yaml = "0.9"
toml = "0.8"

[[bench]]
name = "wind_bench"
harness = false


